--- a/前端工程化.md
+++ b/前端工程化.md
@@ -1508,8 +1508,9 @@ Vue.delete(  target, key ) 删除动态添加的属性
 
 ---
 
-### ⭐️ React
+### ⭐️TODO React
 
+- 💬 描述: 非框架，而是一个用于构建用户界面的库，不局限于Web开发。
 - React DOM
 - React Router
 - Redux
@@ -1518,7 +1519,400 @@ Vue.delete(  target, key ) 删除动态添加的属性
 
 ### ⭐️ 组件库
 
-- ⭐️ ElementUI（Vue）
+- ⭐️ ElementUI（Vue2.0）
+  美化界面，简介代码的另类标签使用  
+  在项目中安装：  
+  > npm i element-ui -S  
+  引入Element—ui并使用
+
+  ```Js
+  import ElementUI from 'element-ui';
+  import 'element-ui/lib/theme-chalk/index.css';
+  Vue.use(ElementUI)
+
+  new Vue({
+    el: '#app',
+    // 注入
+    render: h => h(App)
+  });
+  ``
+
 - ✅ VantUI（Vue）
 - ⭐️ Ant Design（React）
-  
+
+### ⭐️ 脚手架
+
+- 💬 描述：快速生成新项目的目录模板，提升开发效率和开发舒适性。
+- Vue CLI  
+  - 通过 @vue/cli 实现的交互式的项目脚手架。
+  - 通过 @vue/cli + @vue/cli-service-global 实现的零配置原型开发。
+  - 一个运行时依赖 (@vue/cli-service)，可升级，基于webpack构建
+
+  ```shell
+  <!-- 前提 -->
+  npm install vue
+  npm install webpack -g
+  npm i -g @vue/cli-init
+
+  <!-- vue-cli 2.x 创建项目 -->
+  vue init webpack 项目名称
+  <!-- vue-cli 3.x 创建项目 -->
+  vue create 项目名称
+  ```
+
+- create-react-app  
+- ✅ Yeoman
+
+---
+
+## ⭐️ 前端架构设计
+
+💬 描述：一系列工具和流程的集合，旨在提升前端代码的质量，并实现高效可持续的工作流。
+
+### 模块化（node.js）
+
+1. 原生Js存在很多缺陷：var定义的变量作用域、Js的面向对象不能使用class、没有模块化的问题等  
+使用exports来导出 **[const bar = require('./bar');]** 其中bar变量就相当于是exports对象，是一种***浅拷贝***  
+
+2. ⭐浅拷贝与深拷贝的区别：  
+
+   - 浅拷贝：复制指向对象的指针，而非对象本身，新旧对象共享同一块内存（分支）  
+   - 深拷贝：另外创造一个一模一样的对象，但不共享内存（不是分支）
+
+3. CommonJs规范中没有module.exports的概念，但在Node中为了实现导出使用的是Module的类，每一个模块都是Module的实例module，所以在Node中实现导出的真正是module.exports而非exports  
+&emsp;&emsp;⭐module对象的exports属性是exports对象的一个引用  
+&emsp;&emsp;如果在代码证添加了module.exports = { ... }那exports.name就没用了
+
+4. 模块加载顺序
+
+   - 模块在被第一次引入时，模块中的js代码会被运行一次
+   - 模块被多次引入时，会缓存，最终只加载（运行）一次
+   - 循环引入时加载顺序，采用深度优先算法DFS
+
+5. 社区规范CommonJs、AMD（异步模块定义）、CMD（通用）与ES Module
+
+- CommonJS模块加载js文件的过程是运行时加载的，并且是同步的
+- ES Module加载js文件的过程是编译（解析）时加载的，并且是异步的
+
+### 组件化
+
+为解决高耦合、低内聚、无重用的3大问题  
+把代码重复的部分提炼出一个个组件供给功能使用  
+
+### ✅ MVVM
+
+MVC的增强版：本质没区别，只是代码的变动  
+
+- MVC（同步通信为主）
+  Model（数据）、View（视图）、Controller（控制器）
+- MVP（异步通信为主）
+  Model（数据）、View（视图）、Presenter（主持人）
+- MVVM（异步通信为主）
+  Model-ViewModel（桥梁）-View-Controller  
+  专门管理从Controller抽离出来的数据和逻辑处理部分，负责将业务逻辑与用户界面进行绑定，负责处理用户输入和数据更新，并将这些更新传递给Model
+  &emsp;&emsp;向上与视图层双向数据绑定  
+  &emsp;&emsp;向下与Model层通过接口请求数据交互  
+  ⭐一对一绑定、 一对多绑定、命令绑定、事件绑定
+
+### 设计原则
+
+优先降低复杂度，尽量降低耦合度
+
+1. 单一职责原则（一个函数一个功能，请求数据了就不要再渲染了）
+2. 开闭原则 OCP （软件实体对扩展开发、对修改关闭）
+3. 里氏代换原则 （子类可以扩展父类功能，但不能改变父类原有功能）
+4. 迪米特法则 （最小知道原则）LD （一个接口和一个方法，传参越少越好，形成的关联越少越好，依赖最少）
+5. 依赖倒置原则 DIP （依赖接口不依赖方法，只需知道表现即可）
+6. 接口分离原则 ISP （大接口拆成小接口，不能一个接口全实现CRUD）
+
+### ⭐️ SPA 单页应用
+
+只有一张Web页面的应用，加载单个HTML，动态更新  
+动态替换DOM内容并同步修改url地址，来模拟多页应用的效果  
+优点：用户无需刷新页面，全是Ajax操作，页面切换快
+缺点：首屏时间稍慢，SEO（按照搜索引擎的算法）差
+
+### ⭐️ MPA 多页应用
+
+优点：首屏时间稍块，SEO（按照搜索引擎的算法）效果好
+缺点：页面切换慢、用户体验差（加载慢）
+
+<img src="images/单页多页.png" width="500">
+
+### ✅ 前端路由
+
+SPA能够以模拟多页面应用的效果，归功于其前端路由机制。  
+--即前端不同页面的状态管理器  
+实现原理：  
+&emsp;&emsp;常见的路由插件中两种方式都是支持且可以切换的，从Hash模式切换到H5模式：  
+&emsp;&emsp;切换到HTML5的路由模式，主要用于避免url地址中包含#而引发的问题。
+
+1. HashChange
+  &emsp;&emsp;HTML页面中通过**锚点定位原理**实现无刷新跳转，触发后url多出`# + 'xxx'`的部分,同时在全局的window对象上触发hashChange事件,通过代码触发对应的页面DOM改变
+2. HTML5 HistoryAPI
+  浏览器的全局history对象增加的扩展方法。一般用来解决ajax请求无法通过回退按钮回到请求前状态的问题。  
+
+   - history.pushState(data[,title][,url]);//向历史记录中追加一条记录
+   - history.replaceState(data[,title][,url]);//替换当前页在历史记录中的信息。
+   - history.state;// 可以得到当前页的state信息。
+   - window.onpopstate;// 一个事件2，监控浏览器前进后退
+![alt text](images/前端路由.png)
+
+### PWA 渐进式Web应用
+
+优势：  
+
+- PWA 是使用标准的 web 平台技术开发的，所以它们可以从单一代码库在多个操作系统和设备类上运行。
+- PWA 可以直接通过 web 访问
+- PWA 可以安装在设备上（用户拥有而不是用户访问）
+- PWA 可以在后台与离线操作（提供离线体验，自定义离线页面）
+- PWA 可以使用整个屏幕 (en-US)，而非浏览器UI
+
+### 有损服务
+
+在不损坏主流程、核心功能的前提下，让系统 做一些取舍的操作，在高并发、高流量、高峰期时候，保证核心功能、主流程不影响，系统做一些让步或取舍。  
+⭐CPA原理：一致性 可用性 分区容错性  （只能满足其二）  
+⭐base原理：基本可用、软链接、最终一致性  
+
+有损的手段：
+
+- 超时设置
+- 熔断
+- 限流
+- 重试
+- 资源隔离
+- 服务降级
+
+### ✅ 服务端渲染
+
+💬 描述：在服务端渲染 HTML 页面的模式。
+Next.js（React）  
+Nuxt.js（Vue）  
+作为框架，Nuxt.js 为 客户端/服务端 这种典型的应用架构模式提供了许多有用的特性，例如异步数据加载、中间件支持、布局支持等。  
+
+客户端渲染 CSR  
+&emsp;&emsp;HTML 最终是在客户端进行“组装”，内容在完成数据填充后才有
+服务端渲染 SSR  
+&emsp;&emsp;Nuxt 应用的服务器拼接完返回一个完整的HTML，无需发起别的请求接口，所以**首屏渲染**更快  
+
+看重流量用SSR，管理后台等B端不用SSR  
+
+```Shell
+# 创建项目
+npx create-nuxt-app <项目名>
+cd <project-name>
+npm run dev
+```
+
+### BFF
+
+💬 描述：Backend For Frontend（服务于前端的后端），就是服务器设计 API 时会考虑前端的使用，并在服务端直接进行业务逻辑的处理。
+
+BFF中间层是一种架构模式，前端不直接与后端服务通信  
+BFF 中间层负责与多个后端服务进行通信，聚合数据，并将结果返回给前端应用程序  
+
+- 作用：  
+
+  - 为前端应用程序提供一个统一的 API 接口，简化前端应用程序的开发和维护。
+  - 负责与多个后端服务进行通信，聚合数据，降低前端应用程序的复杂度。
+  - 提供负载均衡、服务发现、缓存、错误处理和重试策略等功能，提高系统的性能和可用性。
+
+- GraphQL 针对图状数据查询特有优势
+  &emsp;&emsp;使用REST可能发送 ： 前端请求一个资源所有信息，但只要其中一小部分（过度获取），可能会发起多个网络请求（瀑布式网络请求）  
+  &emsp;&emsp;使用GraphQL则不仅在服务端程使用，也应用到客户端的话，客户端来决定需要什么数据，这样只需要发送一个请求到服务端。
+
+### ✅ 微前端
+
+💬 描述：将前端应用分解成一些更小、更简单的能够独立开发、测试、部署的小块，从而解决庞大的一整块后端服务带来的变更与扩展方面的限制。  
+&emsp;&emsp;SPA单页应用开发模式成为主流，但也逐渐庞大臃肿，需要拆分应用，而微前端能够兼容不同技术栈，将已拆分的子应用重新聚合。
+
+- qiankun
+  在 single-spa 的基础上做了二次开发，在框架层面解决了使用 single-spa 时需要开发人员自己编写子应用加载、通信、隔离等逻辑的问题
+
+- single-spa
+  应用被分为两类：**基座应用和子应用**。其中，子应用就是文章上面描述的需要聚合的子应用；而基座应用，是另外的一个单独的应用，用于聚合子应用。  
+  **原理**：single-spa 会在基座应用中维护一个路由注册表，每个路由对应一个子应用。切换路由时，如果是新的子应用，会动态获取子应用的 js 脚本，执行脚本并渲染；如果是已经访问过的子应用，就会从缓存中获取，激活子应用并渲染。
+
+### CSS in JS
+
+💬 描述：用 JavaScript 来写 CSS。
+
+**关注点分离**: 三种技术分离，不要混合。HTML语义层、CSS视觉层、Js交互层（不要写内联样式或行内样式）  
+**关注点混合**：React出现后，为了组件分离开始三个技术“混合写”，实际上是用Js在写HTML和CSS。  
+
+CSS in JS：第三方库，由于CSS的封装弱，此用来加强React的Css操作。  
+
+#### ⭐️ CSS 模块化
+
+- ⭐️ CSS Modules
+  CSS in JS是让CSS变得像一门编程语言，但CSS Modules只是加入了**局部作用域**和**模块依赖**  
+
+- ✅ styled-components
+- ✅ Styled JSX
+
+---
+
+## ✅ 开发调试
+
+- 💬 描述：本地开发时热更新，提升开发效率。
+- webpack-dev-server（实现代码修改后自动打包，自动刷新浏览器）  
+  实际就使用 webpack-dev-middleware 中间件来处理 webpack 的打包资源，并且和 express 服务器进行关联。同时提供一个 socket 服务，将 webpack 编译打包的各个阶段的状态信息告知给客户端，通知网页调用reload接口刷新页面，从而实现实时重新加载（live reloading）和模块热替换（hot module replacement）功能。
+- serve
+
+### 内网穿透
+
+- 💬 描述：将内网外网通过 nat 隧道打通，让内网的网站、数据让外网可以访问。（有一款局域网游戏，AB想要一起玩。由于是局域网游戏，那么就需要A或者B其中一位，穿透广域网，去到另外一位的家里的局域网，成为局域网的一员）
+- Ngrok （全球分布的反向代理）
+- NATAPP （基于Ngrok的国内高速内网映射工具）
+
+### ⭐️ CSS 预编译
+
+- 💬 描述：使用新的扩展语言以增强 CSS 的能力，并通过预编译的方式将其转换为浏览器认识的 CSS 代码。
+- Less （多次赋值取声明前最后一次赋值）
+- ⭐️ SASS （多次赋值取声明前最近的一次赋值）**不存在即赋值**
+- Stylus （多次赋值取声明前最近的一次赋值）（三剑客）
+- ✅ PostCSS （使用JS插件来转换样式的工具）
+
+---
+
+## 测试
+
+### 测试分类
+
+1. 黑盒测试（功能测试）  
+  把被测软件当成黑盒子，不关心内部结构，只关心输入与输出数据，也包括性能测试
+2. 白盒测试（结构测试、透明盒测试）  
+  打开盒子去研究源代码和程序结果（也是接口测试的一种）
+3. 灰盒测试（功能 + 接口）  
+  介于黑白盒之间，用于集成测试阶段，不仅关注输出、输入的正确性，同时也关注程序内部的情况。
+
+- ⭐️ UT 单元测试（编码后 对软件模块测试 ==== 白盒测试）
+- SIT 系统集成测试  
+  单元测试后 将程序模块组装起来，检查软件单位之间的接口是否正确 ==== 黑盒 + 白盒
+- E2E 端到端测试 （复制真实的用户场景，验证系统的集成和数据完整）
+- UAT 用户验收测试 （让系统用户决定是否接收系统，测试软件是否满足用户的需求和期望）
+
+#### ✅ Mock
+
+💬 描述：通过随机数据，模拟各种场景，增加单元测试的真实性。  
+Mock.js （模拟数据生成器，可以生成随机数据，拦截 Ajax 请求）  
+
+#### ✅ 测试框架
+
+分为两种：TDD(测试驱动开发)、BDD（行为驱动开发）  
+
+- ✅ Jest
+  内置了常用的测试工具，比如自带断言、测试覆盖率工具，实现了开箱即用。还有快照测试，并行执行
+- ✅ Puppeteer（Headless Browser）
+  Node.js库，提供了一个高级 API 来通过 开发工具协议 控制 Chrome/Chromium  
+  - 生成页面的屏幕截图和 PDF。
+  - 抓取 SPA（单页应用）并生成预渲染内容（即 "SSR"（服务器端渲- 染））。
+  - 自动化表单提交、UI 测试、键盘输入等。
+  - 使用最新的 JavaScript 和浏览器功能创建自动化测试环境。
+  - 捕获站点的 时间线痕迹 以帮助诊断性能问题。
+  - 测试 Chrome 扩展程序。
+
+### ✅ 代码质量
+
+#### 开发规范
+
+- 💬 描述：依照规范写出的代码会更加合理。
+- CSS Style Guide
+- JavaScript Style Guide
+
+#### 类型校验
+
+- TypeScript  
+  Js的一个超集，设计目标是开发大型应用，它可以编译成纯 JavaScript，编译出来的 JavaScript 可以运行在任何浏览器上。
+
+#### 代码检查
+
+- ESLint
+- StyleLint
+
+#### 代码风格
+
+- 💬 描述：根据配置自动格式化代码，统一格式。
+- Prettier
+
+#### 提交规范
+
+- 约定式提交
+
+#### 提交检查
+
+- 💬 描述：在提交代码时触发一些操作，比如检查代码的风格等。
+- pre-commit
+- husky
+
+### 构建工具
+
+#### 自动化构建
+
+- 💬 描述：按照配置好的流程自动打包构建项目，提高团队的开发效率，降低项目的维护难度。
+- Gulp
+- ✅ npm script
+- Grunt
+
+#### 打包工具
+
+- 💬 描述：将各种零散的📚 资源文件打包为可在浏览器等环境运行的代码。
+- ⭐️ Webpack (优势：代码分割、静态资源导入、支持热替换HMR)
+  安装：**npm i webpack webpack-cli -D**  
+  打包：**./node_modules/.bin/webpack ./src/app.js  --mode=development**  
+  简易打包：**npx webpack ./src/app.js**
+
+- ✅ Rollup (对ES6有算法优势上的支持)
+  Js模块打包器，将小块代码编译成大块复杂的代码
+
+- ✅ Vite (前端构建工具)  
+  两部分组成：dev server、生产构建  
+  ⭐一个基于浏览器原生ESM的构建工具，它省略了开发环境的打包过程，利用浏览器去解析imports，在服务端按需编译返回。同时，在开发环境拥有速度快到惊人的模块热更新，且热更新的速度不会随着模块增多而变慢。因此，使用Vite进行开发，至少会比Webpack快10倍左右。
+
+### CI / CD
+
+- 💬 描述：通过在应用开发阶段引入自动化来频繁向客户交付应用。
+- GitLab CI
+- ✅ Jenkins
+
+### 部署
+
+#### ⭐️ Web 服务器
+
+#### ⭐️ Nginx (engine x)
+
+- 💬 描述：高性能的 HTTP 和反向代理 web 服务器。
+- 反向代理(在服务器中配置代理服务器)
+  正向代理是在 浏览器中配置代理服务器，而反向代理暴露的是代理服务器地址，隐藏了真实服务器的地址
+- 负载均衡
+  ① 轮询法(默认) ② 加权轮询 ③ ip_hash(哈希算法)
+- 解决跨域
+  纯后端的方式，使用Nginx反向代理
+- 改写请求
+  修改URL实现重定向或路由转发功能
+
+#### ✅ Apache
+
+#### 容器
+
+##### ✅ Docker
+
+- 💬 描述：容器是一个标准化的软件单元，它将代码及其所有依赖关系打包，以便应用程序从一个计算环境可靠快速地运行到另一个计算环境。Docker容器镜像是一个轻量的独立的可执行的软件包。包含程序运行的时候所需的一切：代码，运行时间，系统工具，系统库和设置。
+- Dockerfile
+
+##### Kubernetes（k8s）
+
+#### 部署策略
+
+- 全量发布( 一次性发布给所有用户使用 )
+- 蓝绿部署  
+  先把A组从负载均衡中摘除，进行新版本的部署。B组仍然继续提供服务。当A组升级完毕，负载均衡重新接入A组，再把B组从负载列表中摘除，进行新版本的部署。A组重新提供服务。最后，B组也升级完成，负载均衡重新接入B组。
+- 滚动发布( 每次只升级一个或多个服务，升级完成后加入生产环境 )  
+- 灰度发布( 只升级部分服务,一部分新一部分老，没意见就扩大范围 )
+
+### 监控告警
+
+- 前端埋点
+- 错误监控
+- 性能监控
+- 行为监控
