--- a/算法.md
+++ b/算法.md
@@ -7,6 +7,8 @@
 
 ### 数组和字符串
 
+#### 一、数组
+
 1. 寻找数组的中心索引
 
     ```Java
@@ -261,5 +263,285 @@
     }
     ```
 
+#### 二、字符串
 
-    
+1. 比较字符串： == | equals | compareTo  
+
+    ```Java
+    // 定义 s1、s2、s3
+    String s1 = "Hello World!";
+    String s2 = s1;                 // 将 s1 的引用值赋给了 s2, 指向同一个对象
+    String s3 = new String(s1);     // 重新创建了一个对象，在内存中地址不同，值内容相同
+
+    // ① 使用 "==" 比较 (内存地址，是否指向同一对象)
+    s1 == "Hello World";        // true
+    s1 == s2;                   // true
+    s1 == s3;                   // false⭐
+
+    // ② 使用 "equals()" 方法比较 (仅比较值)
+    s1.equals("Hello World");   // true
+    s1.equals(s2);              // true
+    s1.equals(s3);              // true
+
+    // ③ 使用 "CompareTo()" 比较（两个字符串的字典顺序）
+    s1.compareTo("Hello World") == 0);  // true
+    s1.compareTo(s2) == 0);             // true
+    s1.compareTo(s3) == 0);             // true
+    ```
+
+    总结：
+
+    - ① "=="比较 **字符串** 比较的是其内存的地址值，  
+    对于**基本数据类型**(int,char) 比较值是否相等。  
+    - ② "equals()"比较，在Object类中  <u>默认也比较的是内存地址</u>，  
+    但在许多类(String、Integer、Date)中重写了，只用来比较 值是否相同。  
+    - ③ "CompareTo"比较 是字符串的字典顺序，相同为0，  
+    a.CompareTo(b),若a在b前，返回负值，反之返回正值。  
+
+2. 连接字符串  
+    使用 **toCharArray** 转换为字符数组，字符串可变  
+    如果经常连接字符串，使用 **StringBuilder** 数据类型
+
+3. 最长公共前缀  
+
+   - 横向扫描
+
+   ```Java
+   public String longestCommonPrefix(String[] strs) {
+           if (strs == null || strs.length == 0) {
+               return "";}
+           String prefix = strs[0];
+           int count = strs.length;
+           for (int i = 1; i < count; i++) {
+               prefix = longestCommonPrefix(prefix, strs[i]);
+               if (prefix.length() == 0) {
+                   break;}}
+           return prefix;}
+
+       public String longestCommonPrefix(String str1, String str2) {
+           int length = Math.min(str1.length(), str2.length());
+           int index = 0;
+           while (index < length && str1.charAt(index) == str2.charAt(index)) {
+               index++;
+           }
+           return str1.substring(0, index);}
+   ```
+
+   - 纵向扫描  
+
+   ```Java
+   class Solution {
+       public String longestCommonPrefix(String[] strs) {
+           // 先排除字符串数组为空的情况
+        if (strs == null || strs.length == 0) {
+            return "";}
+        // 获取第一个字符串准备与后面的比较
+        int length = strs[0].length();
+        // 获取数组长度
+        int count = strs.length;
+
+        // 纵向查找action
+        // 先取每个字符的第一个字符，若成功匹配则循环下一个字符
+        for (int i=0; i < length;i++) {
+            // 取到第一个字符串 索引为 i 的字符
+            char c = strs[0].charAt(i);
+            for (int j=1; j < count;j++) {
+                // 先确定后面的字符串还有后余字符
+                if (i == strs[j].length() || strs[j].charAt(i) != c) {
+                    return strs[0].substring(0, i);
+                   }}}
+           return strs[0];}}
+   ```
+
+   - 分治法
+
+   ```java
+   class Solution {
+       public String longestCommonPrefix(String[] strs) {
+           if (strs == null || strs.length == 0) {
+               return "";
+           } else {
+               return longestCommonPrefix(strs, 0, strs.length - 1);
+           }
+       }
+
+       public String longestCommonPrefix(String[] strs, int start, int end) {
+           if (start == end) {
+               return strs[start];
+           } else {
+               int mid = (end - start) / 2 + start;
+               String lcpLeft = longestCommonPrefix(strs, start, mid);
+               String lcpRight = longestCommonPrefix(strs, mid + 1, end);
+               return commonPrefix(lcpLeft, lcpRight);}}
+
+       public String commonPrefix(String lcpLeft, String lcpRight) {
+           int minLength = Math.min(lcpLeft.length(), lcpRight.length());       
+           for (int i = 0; i < minLength; i++) {
+               if (lcpLeft.charAt(i) != lcpRight.charAt(i)) {
+                   return lcpLeft.substring(0, i);
+               }}
+           return lcpLeft.substring(0, minLength);}}
+   ```
+
+   - 二分查找法
+
+   ```Java
+   class Solution {
+       public String longestCommonPrefix(String[] strs) {
+           if (strs == null || strs.length == 0) {
+               return "";
+           }
+           int minLength = Integer.MAX_VALUE;
+           for (String str : strs) {
+               minLength = Math.min(minLength, str.length());
+           }
+           int low = 0, high = minLength;
+           while (low < high) {
+               int mid = (high - low + 1) / 2 + low;
+               if (isCommonPrefix(strs, mid)) {
+                   low = mid;
+               } else {
+                   high = mid - 1;
+               }}
+           return strs[0].substring(0, low);}
+
+       public boolean isCommonPrefix(String[] strs, int length) {
+           String str0 = strs[0].substring(0, length);
+           int count = strs.length;
+           for (int i = 1; i < count; i++) {
+               String str = strs[i];
+               for (int j = 0; j < length; j++) {
+                   if (str0.charAt(j) != str.charAt(j)) {
+                       return false;
+                   }}}
+           return true;}}
+   ```
+
+4. ⭐最长回文子串  
+
+    ```Java
+    // ⭐1. 动态规划
+    // 状态转移方程
+    P(i,j)=P(i+1,j−1)∧(Si == Sj)
+
+    public class Solution {
+
+        public String longestPalindrome(String s) {
+            int len = s.length();
+            if (len < 2) {    return s;   }
+
+            int maxLen = 1;
+            int begin = 0;
+            // dp[i][j] 表示 s[i..j] 是否是回文串
+            boolean[][] dp = new boolean[len][len];
+            // 初始化：所有长度为 1 的子串都是回文串
+            // 先把可以简单判断为 true 的标记出来
+            for (int i = 0; i < len; i++) {
+                dp[i][i] = true;
+            }
+
+            char[] charArray = s.toCharArray();
+            // 递推开始
+            // 先枚举子串长度（长度为1或2的已经标记过了，L从2开始）
+            for (int L = 2; L <= len; L++) {
+                // 枚举左边界，左边界的上限设置可以宽松一些
+                for (int i = 0; i < len; i++) {
+                    // 由 L 和 i 可以确定右边界，即 j - i + 1 = L 得
+                    int j = L + i - 1;
+                    // 如果右边界越界，就可以退出当前循环
+                    if (j >= len) {     break;    }
+
+                    if (charArray[i] != charArray[j]) {
+                        dp[i][j] = false;
+                    } else {
+                        // 已到达中心位置
+                        if (j - i < 3) {
+                            dp[i][j] = true;
+                        } else {   
+                            // 首尾相等且中间还要字串，则只要判断字段是否为回文即可 
+                            dp[i][j] = dp[i + 1][j - 1];   
+                        }}
+
+                    // 只要 dp[i][L] == true 成立，就表示子串 s[i..L] 是回文，此时记录回文长度和起始位置
+                    if (dp[i][j] && j - i + 1 > maxLen) {
+                        maxLen = j - i + 1;
+                        begin = i;
+                    }}}
+            return s.substring(begin, begin + maxLen);}}
+
+    // 2. 中心扩展算法
+    public String longestPalindrome(String s) {
+            if (s == null || s.length() < 1) {
+                return "";
+            }
+            int start = 0, end = 0;
+            for (int i = 0; i < s.length(); i++) {
+                int len1 = expandAroundCenter(s, i, i);
+                int len2 = expandAroundCenter(s, i, i + 1);
+                int len = Math.max(len1, len2);
+                if (len > end - start) {
+                    start = i - (len - 1) / 2;
+                    end = i + len / 2;
+                }}
+            return s.substring(start, end + 1);
+        }
+
+        public int expandAroundCenter(String s, int left, int right) {
+            while (left >= 0 && right < s.length() && s.charAt(left) == s.charAt(right)) {
+                --left;
+                ++right;
+            }
+            return right - left - 1;
+        }
+    ```
+
+5. 反转字符串里的单词
+
+    ```java
+    public String reverseWords(String s) {
+            // 除去开头和末尾的空白字符
+            s = s.trim();
+            // 正则匹配连续的空白字符作为分隔符分割
+            List<String> wordList = Arrays.asList(s.split("\\s+"));
+            Collections.reverse(wordList);
+            return String.join(" ", wordList);
+        }
+    ```
+
+6. 双指针之反转字符串
+
+    ```java
+    // 我的傻子法
+    class Solution {
+        public void reverseString(char[] s) {
+            int n = s.length;
+            // 定义双指针
+            int l = 0;
+            int r = n-1;
+            char temp;
+            while(l<r) {
+                temp = s[l];
+                s[l] = s[r];
+                s[r] = temp;
+                l++;
+                r--;
+            }
+            // 直接打印s的是s的地址，应该用String.valueOf()
+            System.out.println(String.valueOf(s));
+        }
+    }
+
+    // 优雅不耗时法
+    class Solution {
+        public void reverseString(char[] s) {
+            int n = s.length;
+            for (int left = 0, right = n - 1; left < right; ++left, --right) {
+                char tmp = s[left];
+                s[left] = s[right];
+                s[right] = tmp;
+            }
+        }
+    }
+    ```
+
+7. 
