--- a/前端工程化.md
+++ b/前端工程化.md
@@ -1652,8 +1652,8 @@ SPA能够以模拟多页面应用的效果，归功于其前端路由机制。
 2. HTML5 HistoryAPI
   浏览器的全局history对象增加的扩展方法。一般用来解决ajax请求无法通过回退按钮回到请求前状态的问题。  
 
-   - history.pushState(data[,title][,url]);//向历史记录中追加一条记录
-   - history.replaceState(data[,title][,url]);//替换当前页在历史记录中的信息。
+   - history.pushState(data,title,url);//向历史记录中追加一条记录
+   - history.replaceState(data,title,url);//替换当前页在历史记录中的信息。
    - history.state;// 可以得到当前页的state信息。
    - window.onpopstate;// 一个事件2，监控浏览器前进后退
 ![alt text](images/前端路由.png)
