--- a/前端工程化.md
+++ b/前端工程化.md
@@ -893,7 +893,8 @@ filters: {
 > 区别：  
 > v-if : 插入或删除元素  
 > v-show : 通过隐藏==display:none  
-> 比较：1. v-if安全级别更高，v-show只是隐藏，通过源代码看得到  
+> 比较：
+> 1.v-if安全级别更高，v-show只是隐藏，通过源代码看得到  
 > 2.v-if 有更高的切换消耗 ===== v-show 有更高的初始化渲染消耗
 
 - 循环语句
