--- a/算法.md
+++ b/算法.md
@@ -5,6 +5,43 @@
 
 ## 经典算法题集锦
 
+### 题库
+
+1. 两数之和
+
+    ```Java
+    // 1. 普通嵌套双循环，略慢
+    public int[] twoSum(int[] nums, int target) {
+        int[] res = new int[2];
+        for (int i=0;i<nums.length;i++) {
+            for (int j=i+1;j<nums.length;j++) {
+                if(nums[i] + nums[j] == target) {                    
+                    res[0] = i;
+                    res[1] = j; }}
+        } return res;}
+
+    // 2. 利用HashMap优化
+    public int[] twoSum(int[] nums, int target) {
+        int size=nums.length;
+        Map<Integer,Integer> map=new HashMap<>();
+        for(int i=0;i<size;i++){
+            int current=nums[i];
+            int another=target-current;
+            if(map.containsKey(another)){
+                int anotherIndex=map.get(another);
+                return new int[]{anotherIndex,i};
+            }else{
+                map.put(current,i);
+            }
+        }
+        return new int[]{0,0};
+    }
+    ```
+
+2. 
+
+---
+
 ### 数组和字符串
 
 #### 一、数组
@@ -265,44 +302,7 @@
 
 #### 二、字符串
 
-1. 比较字符串： == | equals | compareTo  
-
-    ```Java
-    // 定义 s1、s2、s3
-    String s1 = "Hello World!";
-    String s2 = s1;                 // 将 s1 的引用值赋给了 s2, 指向同一个对象
-    String s3 = new String(s1);     // 重新创建了一个对象，在内存中地址不同，值内容相同
-
-    // ① 使用 "==" 比较 (内存地址，是否指向同一对象)
-    s1 == "Hello World";        // true
-    s1 == s2;                   // true
-    s1 == s3;                   // false⭐
-
-    // ② 使用 "equals()" 方法比较 (仅比较值)
-    s1.equals("Hello World");   // true
-    s1.equals(s2);              // true
-    s1.equals(s3);              // true
-
-    // ③ 使用 "CompareTo()" 比较（两个字符串的字典顺序）
-    s1.compareTo("Hello World") == 0);  // true
-    s1.compareTo(s2) == 0);             // true
-    s1.compareTo(s3) == 0);             // true
-    ```
-
-    总结：
-
-    - ① "=="比较 **字符串** 比较的是其内存的地址值，  
-    对于**基本数据类型**(int,char) 比较值是否相等。  
-    - ② "equals()"比较，在Object类中  <u>默认也比较的是内存地址</u>，  
-    但在许多类(String、Integer、Date)中重写了，只用来比较 值是否相同。  
-    - ③ "CompareTo"比较 是字符串的字典顺序，相同为0，  
-    a.CompareTo(b),若a在b前，返回负值，反之返回正值。  
-
-2. 连接字符串  
-    使用 **toCharArray** 转换为字符数组，字符串可变  
-    如果经常连接字符串，使用 **StringBuilder** 数据类型
-
-3. 最长公共前缀  
+1. 最长公共前缀  
 
    - 横向扫描
 
@@ -417,7 +417,7 @@
            return true;}}
    ```
 
-4. ⭐最长回文子串  
+2. ⭐最长回文子串  
 
     ```Java
     // ⭐1. 动态规划
@@ -495,7 +495,7 @@
         }
     ```
 
-5. 反转字符串里的单词
+3. 反转字符串里的单词
 
     ```java
     public String reverseWords(String s) {
@@ -508,7 +508,59 @@
         }
     ```
 
-6. 双指针之反转字符串
+4. 字符串匹配算法KMP
+
+    ```Java
+    // 1. 暴力匹配法
+    public int strStr(String haystack, String needle) {
+        int n = haystack.length(), m = needle.length();
+        // i + 字串长 <= 主串长
+        for (int i = 0; i + m <= n; i++) {
+            // 初始化
+            boolean flag = true;
+            // 遍历主串
+            for (int j = 0; j < m; j++) {
+                // 拿主串从0开始往后对应匹配  不符则往后移一位
+                if (haystack.charAt(i + j) != needle.charAt(j)) {
+                    flag = false;
+                    break;
+                }}
+            // 排除掉不满足的 剩下的为true
+            if (flag) {
+                return i;
+            }}
+        return -1;}
+
+    // ❓ KMP算法
+     public int strStr(String haystack, String needle) {
+        int n = haystack.length(), m = needle.length();
+        if (m == 0) {
+            return 0;
+        }
+        int[] pi = new int[m];
+        for (int i = 1, j = 0; i < m; i++) {
+            while (j > 0 && needle.charAt(i) != needle.charAt(j)) {
+                j = pi[j - 1];
+            }
+            if (needle.charAt(i) == needle.charAt(j)) {
+                j++;
+            }
+            pi[i] = j;
+        }
+        for (int i = 0, j = 0; i < n; i++) {
+            while (j > 0 && haystack.charAt(i) != needle.charAt(j)) {
+                j = pi[j - 1];
+            }
+            if (haystack.charAt(i) == needle.charAt(j)) {
+                j++;
+            }
+            if (j == m) {
+                return i - m + 1;
+            }}
+        return -1;}
+    ```
+
+5. 双指针之反转字符串
 
     ```java
     // 我的傻子法
@@ -544,4 +596,194 @@
     }
     ```
 
-7. 
+6. 数组拆分
+
+    ```Java
+    public int arrayPairSum(int[] nums) {
+        // 先排序，1，2，3，4，5，6
+        // 不能每次选最大的，因为有min(1,2),所以只能选第二大的
+        // 而且min()中 二者差距越小越好，如果是min(1，6)那就会白白损失6这个大数
+        Arrays.sort(nums);
+        int res = 0;
+        for(int i=0;i<nums.length;i+=2) {
+            res = res + nums[i];
+        }
+        return res;
+    }
+    ```
+
+7. 两数之和 II - 输入有序数组
+
+    ```Java
+    // 二分查找
+    public int[] twoSum(int[] numbers, int target) {
+            for (int i = 0; i < numbers.length; ++i) {
+                int low = i + 1, high = numbers.length - 1;
+                while (low <= high) {
+                    int mid = (high - low) / 2 + low;
+                    if (numbers[mid] == target - numbers[i]) {
+                        return new int[]{i + 1, mid + 1};
+                    } else if (numbers[mid] > target - numbers[i]) {
+                        high = mid - 1;
+                    } else {
+                        low = mid + 1;
+                    }}}
+            return new int[]{-1, -1};
+        }
+
+    // 双指针
+    public int[] twoSum(int[] numbers, int target) {
+            int low = 0, high = numbers.length - 1;
+            while (low < high) {
+                int sum = numbers[low] + numbers[high];
+                if (sum == target) {
+                    return new int[]{low + 1, high + 1};
+                } else if (sum < target) {
+                    ++low;
+                } else {
+                    --high;
+                }
+            }
+            return new int[]{-1, -1};   }
+    ```
+
+8. 移除元素
+    给你一个数组 nums 和一个值 val，你需要 原地 移除所有数值等于 val 的元素，并返回移除后数组的新长度。  
+    不要使用额外的数组空间，你必须仅使用 O(1) 额外空间并 原地 修改输入数组。  
+    元素的顺序可以改变。你不需要考虑数组中超出新长度后面的元素。
+
+    ```Java
+    // 双指针
+    public int removeElement(int[] nums, int val) {
+            // 只关心最后的数组长度，不管是不是删除掉的
+            int low =0;
+            int n = nums.length;
+            for (int high = 0;high < n; high++) {
+                if (nums[high] != val) {
+                    nums[low] = nums[high];
+                    low++;
+                }}
+            return low;}
+
+    // 优化：避免了需要保留的元素的重复赋值操作
+    public int removeElement(int[] nums, int val) {
+        int low = 0;
+        int high = nums.length;
+        while (low < high) {
+            if (nums[low] == val) {
+                nums[low] = nums[high - 1];
+                high--;
+            }else {
+                low++;
+            }}
+        return low;}
+    ```
+
+9. 最大连续1的数  
+
+    ```java
+    public int findMaxConsecutiveOnes(int[] nums) {
+        int n = nums.length;
+        int maxCount=0,count=0;
+        for (int i=0;i<n;i++) {
+            if (nums[i] == 1) {
+                count++;
+            }else {
+                maxCount = Math.max(maxCount,count);
+                count = 0;
+            }
+        }
+        // 最后一位可能也为1，无法进入else分支，可能漏掉
+        // 要再计算一下更大的值
+        maxCount = Math.max(maxCount,count);
+        return maxCount;
+    }
+    ```
+
+10. 长度最小的数组  
+    给定一个含有 n 个正整数的数组和一个正整数 target  
+    找出该数组中满足其总和大于等于 target 的长度最小的 连续子数组 [numsl, numsl+1, ..., numsr-1, numsr] ，并返回其长度。如果不存在符合条件的子数组，返回 0  
+
+    ```Java
+    // 1. 暴力解法
+    public int minSubArrayLen(int s, int[] nums) {
+            int n = nums.length;
+            if (n == 0) {   return 0;   }
+            int ans = Integer.MAX_VALUE;
+            for (int i = 0; i < n; i++) {
+                int sum = 0;
+                for (int j = i; j < n; j++) {
+                    sum += nums[j];
+                    if (sum >= s) {
+                        ans = Math.min(ans, j - i + 1);
+                        break;
+                    }}}
+            return ans == Integer.MAX_VALUE ? 0 : ans;
+    }
+
+    // 2. 前缀和 + 二分查找
+    public int minSubArrayLen(int s, int[] nums) {
+            int n = nums.length;
+            if (n == 0) {   return 0;   }
+            int ans = Integer.MAX_VALUE;
+            int[] sums = new int[n + 1]; 
+            // 为了方便计算，令 size = n + 1 
+            // sums[0] = 0 意味着前 0 个元素的前缀和为 0
+            // sums[1] = A[0] 前 1 个元素的前缀和为 A[0]
+            // 以此类推
+            for (int i = 1; i <= n; i++) {
+                sums[i] = sums[i - 1] + nums[i - 1];
+            }
+            for (int i = 1; i <= n; i++) {
+                int target = s + sums[i - 1];
+                int bound = Arrays.binarySearch(sums, target);
+                if (bound < 0) {
+                    bound = -bound - 1;
+                }
+                if (bound <= n) {
+                    ans = Math.min(ans, bound - (i - 1));
+                }}
+            return ans == Integer.MAX_VALUE ? 0 : ans;
+        }
+
+    // 3. 滑动窗口
+    // 每一轮迭代，将 nums[end] 加到 sum, 如果 sum≥s，则更新子数组的最小长度（此时子数组的长度是 end−start+1），然后将 nums[start] 从 sum 中减去并将 start 右移，直到 sum < s，在此过程中同样更新子数组的最小长度。在每一轮迭代的最后，将end 右移。
+    public int minSubArrayLen(int s, int[] nums) {
+            int n = nums.length;
+            if (n == 0) {   return 0;   }
+            int ans = Integer.MAX_VALUE;
+            int start = 0, end = 0;
+            int sum = 0;
+            while (end < n) {
+                sum += nums[end];
+                while (sum >= s) {
+                    ans = Math.min(ans, end - start + 1);
+                    sum -= nums[start];
+                    start++;
+                }
+                end++;
+            }
+            return ans == Integer.MAX_VALUE ? 0 : ans;
+        }
+    ```
+
+11. 杨辉三角
+
+```Java
+ public List<List<Integer>> generate(int numRows) {
+        List<List<Integer>> ret = new ArrayList<List<Integer>>();
+        for (int i = 0; i < numRows; ++i) {
+            List<Integer> row = new ArrayList<Integer>();
+            for (int j = 0; j <= i; ++j) {
+                if (j == 0 || j == i) {
+                    row.add(1);
+                } else {
+                    row.add(ret.get(i - 1).get(j - 1) + ret.get(i - 1).get(j));
+                }
+            }
+            ret.add(row);
+        }
+        return ret;
+    }
+
+```
